monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0821/A0821a.java
public const1(int i, String... i) {}
